--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "next": "latest",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-flexbox-grid": "^2.1.2"
   },
