--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "dev": "next",
-    "build": "next build",
+    "build": "next build && export",
     "start": "next start",
     "type-check": "tsc",
     "compile:less": "lessc ./styles/main.less ./styles/antd.css --js"
