--- a/content/projects.json
+++ b/content/projects.json
@@ -2,16 +2,19 @@
     {
         "title": "Moviezzed",
         "description": "Movizzed is makeover of my first application that I had developed, always using the TMdb API, in Reactjs.",
-        "link": ""
+        "link": "#",
+        "imgSrc": ""
     },
     {
         "title": "CosmeticCommerce",
         "description": "Among many reasons I mainly chose an online store as a project to develop due its complexity.",
-        "link": ""
+        "link": "#",
+        "imgSrc": ""
     },
     {
         "title": "TaskiaTool",
         "description": "This project was built to gain a deeper understanding of NextJS, when I first started learning the framework.",
-        "link": ""
+        "link": "#",
+        "imgSrc": ""
     }
 ]
